--- a/erpnext/locale/sv.po
+++ b/erpnext/locale/sv.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: frappe\n"
 "Report-Msgid-Bugs-To: hello@frappe.io\n"
 "POT-Creation-Date: 2025-06-15 09:36+0000\n"
-"PO-Revision-Date: 2025-06-17 02:55\n"
+"PO-Revision-Date: 2025-06-19 02:56\n"
 "Last-Translator: hello@frappe.io\n"
 "Language-Team: Swedish\n"
 "MIME-Version: 1.0\n"
@@ -11910,7 +11910,7 @@ msgstr "Konsoliderad Kredit Faktura"
 #: erpnext/accounts/report/consolidated_financial_statement/consolidated_financial_statement.json
 #: erpnext/accounts/workspace/financial_reports/financial_reports.json
 msgid "Consolidated Financial Statement"
-msgstr "Koncern Bokslut"
+msgstr "Koncern Finans Rapport"
 
 #. Label of the consolidated_invoice (Link) field in DocType 'POS Invoice'
 #. Label of the consolidated_invoice (Link) field in DocType 'POS Invoice Merge
@@ -20606,7 +20606,7 @@ msgstr "Finansiella Tjänster"
 #: erpnext/accounts/workspace/financial_reports/financial_reports.json
 #: erpnext/public/js/financial_statements.js:122
 msgid "Financial Statements"
-msgstr "Bokslut"
+msgstr "Finans Rapporter"
 
 #: erpnext/public/js/setup_wizard.js:48
 msgid "Financial Year Begins On"
